--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
